k8s/fruits-catalog-static-secret-deployment.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: fruits-catalog
    group: com.github.lbroudoux.msa
    provider: fabric8
    version: 1.0.0-SNAPSHOT
  name: fruits-catalog
spec:
  replicas: 1
  selector:
    app: fruits-catalog
    group: com.github.lbroudoux.msa
    provider: fabric8
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 3600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: fruits-catalog
        group: com.github.lbroudoux.msa
        provider: fabric8
        version: 1.0.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KEYCLOAK_URL
              value: 'https://keycloak-fruits-catalog.apps.144.76.24.92.nip.io/auth'
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.namespace
          image: >-
            docker-registry.default.svc:5000/fruits-catalog/fruits-catalog:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          name: spring-boot
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 9779
              name: prometheus
              protocol: TCP
            - containerPort: 8778
              name: jolokia
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            limits:
              cpu: '1'
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
          - name: app-creds
            mountPath: /etc/app
          - name: vault-token
            mountPath: /etc/vault
          - name: app-config
            mountPath: /deployments/config
          securityContext:
            privileged: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: fruits-catalog-vault
      serviceAccountName: fruits-catalog-vault
      volumes:
      - name: app-creds
        emptyDir: {}
      - name: app-config
        emptyDir: {}
      - name: vault-token
        emptyDir: {}
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - spring-boot
        from:
          kind: ImageStreamTag
          name: 'fruits-catalog:latest'
          namespace: fruits-catalog
      type: ImageChange
