k8s/keycloak-deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector: 
    matchLabels:  
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak-server
        image: jboss/keycloak:6.0.1
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        - name: jolokia
          containerPort: 8778
          protocol: TCP
        livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /auth/realms/master
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 3
        readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /auth/realms/master
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 3
        volumeMounts:
        - name: keycloak-config
          mountPath: "/opt/jboss/keycloak/standalone/configuration/realm"
        securityContext:
          privileged: false
      volumes:
      - name: keycloak-config
        configMap:
          name: keycloak-config
      restartPolicy: Always
      dnsPolicy: ClusterFirst
---
kind: Service
apiVersion: v1
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: keycloak
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: keycloak
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: keycloak-postgresql
  labels:
    app: keycloak
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector: 
    matchLabels:  
      app: keycloak-postgresql
      deploymentconfig: keycloak-postgresql
  template:
    metadata:
      labels:
        app: keycloak-postgresql
        deploymentconfig: keycloak-postgresql
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: keycloak-postgresql
        image: centos/postgresql-95-centos7:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
          protocol: TCP
        readinessProbe:
          timeoutSeconds: 1
          initialDelaySeconds: 5
          exec:
            command:
            - "/bin/sh"
            - "-i"
            - "-c"
            - psql 127.0.0.1 -U ${POSTGRESQL_USER} -q -d ${POSTGRESQL_DATABASE}
              -c 'SELECT 1'
        livenessProbe:
          timeoutSeconds: 1
          initialDelaySeconds: 30
          tcpSocket:
            port: 5432
        volumeMounts:
          - name: keycloak-postgresql-data
            mountPath: "/var/lib/pgsql/data"
      volumes:
      - name: keycloak-postgresql-data
        persistentVolumeClaim:
          claimName: keycloak-postgresql
---
kind: Service
apiVersion: v1
metadata:
  name: keycloak-postgresql
  labels:
    app: keycloak
spec:
  ports:
    - name: keycloak-postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: keycloak-postgresql
    deploymentconfig: keycloak-postgresql
