k8s/mongodb-deployment.yml
---
kind: Service
apiVersion: v1
metadata:
  name: mongodb
  labels:
    app: fruits-catalog
    container: mongodb
spec:
  ports:
    - name: mongodb
      protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: fruits-catalog
    container: mongodb
  type: ClusterIP
  sessionAffinity: None
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongodb
  labels:
    app: fruits-catalog
    container: mongodb
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector: 
    matchLabels:  
      app: fruits-catalog
      deploymentconfig: mongodb
      container: mongodb
  template:
    metadata:
      labels:
        app: fruits-catalog
        deploymentconfig: mongodb
        container: mongodb
    spec:
      containers:
      - name: mongodb
        image: centos/mongodb-32-centos7:latest
        ports:
        - containerPort: 27017
          protocol: TCP
        readinessProbe:
          timeoutSeconds: 1
          initialDelaySeconds: 3
          exec:
            command:
            - "/bin/sh"
            - "-i"
            - "-c"
            - mongo 127.0.0.1:27017/$MONGODB_DATABASE -u $MONGODB_USER -p $MONGODB_PASSWORD
              --eval="quit()"
        livenessProbe:
          timeoutSeconds: 1
          initialDelaySeconds: 30
          tcpSocket:
            port: 27017
        resources:
          limits:
            memory: 512Mi
        volumeMounts:
        - name: "mongodb-data"
          mountPath: "/var/lib/mongodb/data"
        terminationMessagePath: "/dev/termination-log"
        imagePullPolicy: IfNotPresent
        securityContext:
          capabilities: {}
          privileged: false
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      volumes:
      - name: "mongodb-data"
        persistentVolumeClaim:
          claimName: "mongodb"
