k8s/mongodb-istio-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mongodb
spec:
  hosts:
  - mongodb
  http:
  - route:
    - destination:
        host: mongodb
        subset: v1
